# 904_mk_data_sample01_analysis

./: .env.example  .gitignore  ANALYSIS_CATALOG.md  README.md  config.yaml  pyproject.toml
.claude/skills/analyze/: skill.md
.claude/skills/report-executive/: skill.md
.claude/skills/report-technical/: skill.md
customer/: churn.py  clustering.py  cohort.py  ltv.py  segment_transition.py
effectiveness/: campaign.py  mmm.py  mmm_by_cluster.py  roi.py  uplift.py
journey/: attribution.py  basket.py  funnel.py  golden_path.py
lib/: data_loader.py
other/: AD_OPERATIONS_NOTES.md  REPORT.md  REPORT_EXECUTIVE.md
prediction/: budget.py  demand.py  nba.py
