[project]
name = "cdp-analysis-framework"
version = "2.0.0"
description = "CDP Analysis Framework - clustering, attribution, MMM, LTV, churn prediction, and more"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "lifetimes>=0.11",
    "mlxtend>=0.23",
    "statsmodels>=0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
